fix: align chart axis label colors

--- a/app/src/styles/themes/dark/_charts.scss
+++ b/app/src/styles/themes/dark/_charts.scss
@@ -14,7 +14,7 @@
 
   /* Axes / grid */
   --chart-tick-color: rgb(170, 188, 212);
-  --chart-title-color: rgb(221, 228, 238);
+  --chart-title-color: rgb(170, 188, 212);
   --chart-grid-line: rgba(255, 255, 255, 7%);
 
   /* Arc (donut separator) */
